src/sass/_agenda.scss
.empl-search-page {
  .section {
    background-color: $color-white;
    border: 3px solid $tm-gray;
    display: flex;
    flex-direction: column;
    margin-bottom: 1em;
    min-height: 200px;
    padding: 25px;
    box-shadow: rgba(0, 0, 0, 0.15) 3px 2px 10px 1px;
  }

  .padded-section {
    padding: 25px;
  }

  .no-padding {
    padding: 0;
  }
  .align-middle {
    margin: auto;
    text-align: center
  }

  .all-inline {
    display: flex;
    margin-bottom: 20px;
  }

  .mainSelector {
    font-size: 2.5rem;
    margin: 0 0 20px -30px;
  }

  .usa-width-one-sixth {
    margin-bottom: 10px;
  }

  .empl-search-upper-section {
    box-shadow: 20px 20px 20px $bg-gray-medium-2;
    padding: 20px 35px;
    background-color: $bg-blue-dark-1;
  }

  .filterby-container {
    margin-top: 20px;
    .filterby-label {
      font-size: 20px;
      margin-bottom: 10px;
      float: left;
      width: 115px;
    }
    .filterby-clear {
      font-weight: bold;
      .fa-times {
        color: $color-red;
        margin-right: 5px;
      }
    }
  }
  .empl-search-filters {
    display: grid;
    grid-template-columns: repeat(auto-fill,minmax(350px, 1fr));
    .filter-div {
      align-items: center;
      margin-right: 10px;
      display: flex;
      .label {
        margin-right: 10px;
        min-width: 115px;
        text-align: end;
      }
      .picky {
        color: $color-black;
        width: 240px;
      }
    }
    .split-filter-div {
      .picky {
        width: 120px;
      }
      .picky:nth-child(3) {
        .picky__dropdown {
          margin-left: -120px;
        }
      }
      .picky__dropdown {
        width: 240px;
      }
    }
    .handshake-filter-div {
      .label {
        max-width: 115px;
      }
    }
    input {
      display: inline;
    }
    .react-daterange-picker {
      background: $color-white;
      align-items: center;
      height: 28px;
      width: 240px;
      font-size: 1.5rem;

      .react-daterange-picker__wrapper {
        border: none;
      }
      .react-daterange-picker__inputGroup {
        display: flex;
        justify-content: center;
        align-items: center;
      }
      .react-daterange-picker__range-divider,
      .react-daterange-picker__inputGroup__leadingZero,
      .react-date-picker__inputGroup__divider {
        color: $color-black;
      }
    }
  }
}

.empl-search-lower-section {
  padding: 0 35px 20px;
}

.empl-search-controls-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-top: 15px;
  padding-left: 35px;
}

.empl-search-results-controls {
  align-items: center;
  display: flex;
  justify-content: flex-end;
  padding: 0px 35px;

  div:first-child {
    margin-right: 10px;
  }

  div {
    display: flex;
    align-items: baseline;
  }
}

.empl-search-controls-right {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 35px;

  .results-viewby-container {
    min-width: 120px;
  }
}

.empl-search-page-size {
  margin-left: 20px;
}

.empl-search-controls {
  padding-left: 35px;
}

.employee-agenda-card {
  display: flex;
  flex-wrap: wrap;

  .employee-agenda-stat-card {
    border-top: 11px solid $primary-blue;
    display: flex;
    flex-direction: column;
    height: 350px;
    margin-bottom: 25px;
    margin-left: 15px;
    margin-right: 25px;
    width: 335px;

    a {
      display: inline-block;
    }

    h3 {
      font-family: inherit;
      font-size: 1.6rem;
      margin: 0 5px 0 0;
    }

    dt {
      font-weight: bold;
    }

    dd {
      margin-left: 5px;
    }

    .employee-agenda-card-inner {
      padding: 16px;

      .employee-agenda-card-top {
        position: relative;

        .employee-ribbon-container {
          display: flex;

          .ribbon-container-condensed {
            position: absolute;
            right: -16px;
            top: -17px;
            z-index: 2;
          }
        }
      }

      .employee-agenda-card-data-point-top {
        margin-bottom: 4rem;
        margin-top: .5rem;
      }
    }

    .employee-card-data-point {
      align-items: center;
      display: flex;
      margin-bottom: 5px;

      .fa {
        padding-right: 6px;
      }

      .org-fa-arrow {
        padding: 0 9px;
      }
    }

    .employee-agenda-card-bottom {
      border-top: 1px solid $color-gray-lighter;
      margin-top: -10px;

      > div {
        display: flex;
        padding: 10px 16px 0;
      }

      .button-container {
        margin-top: 1.1rem;
      }
    }
  }
}

// IE11 fix for input text not displaying
@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
  .employee-agenda-card {
    max-width: calc(100vw - 260px);
  }
}

.view-agenda-item-container {
  margin-right: 2rem;

  .view-agenda-item-button {
    background-color: $color-white;
    border: 1px solid $blue-primary;
    border-radius: 3px;
    color: $blue-primary;
    margin: auto;
    padding-bottom: 13px;
    padding-top: 14px;
    text-align: center;
    width: 130px;
  }

  .view-agenda-item-button:hover {
    border-color: $primary-blue-darker;
    color: $primary-blue-darker;
  }
}

.create-ai-box-container {

  .create-ai-box-button {
    background-color: $blue-primary;
    border: 1px solid $blue-primary;
    border-radius: 3px;
    color: $color-white;
    font-size: 1.5rem;
    line-height: 37px;
    margin: auto;
    padding: 3px;
    text-align: center;
    width: 150px;
  }

  .create-ai-box-button:hover {
    background-color: $primary-blue-darker;
  }
}
/* ... */

